envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }

static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address: { address: 0.0.0.0, port_value: 443 }
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          codec_type: auto
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match: { prefix: "/containerd.services" }
                route:
                  cluster: containerd_service
                  max_grpc_timeout: 0s
              - match: { prefix: "/public" }
                per_filter_config:
                  envoy.ext_authz:
                    disabled: true
                route:
                  cluster: default_service
              - match: { prefix: "/" }
                route:
                  cluster: default_service
              cors:
                allow_origin:
                - "*"
                allow_methods: GET, PUT, DELETE, POST, OPTIONS
                allow_headers: containerd-namespace,keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,custom-header-1,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout
                max_age: "1728000"
                expose_headers: containerd-namespace,custom-header-1,grpc-status,grpc-message
                enabled: true
          http_filters:
          - name: envoy.ext_authz
            config:
              grpc_service:
                envoy_grpc:
                  cluster_name: ext-authz
                timeout: 0.5s
          - name: envoy.grpc_web
          - name: envoy.cors
          - name: envoy.router
      tls_context:
        common_tls_context:
          tls_certificates:
          - certificate_chain: {"filename": "/etc/envoy/EnvoyCert.crt"}
            private_key: {"filename": "/etc/envoy/Envoy.key"}
  clusters:
  - name: ext-authz
    type: static
    http2_protocol_options: {}
    load_assignment:
      cluster_name: ext-authz
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 10003
    connect_timeout: 0.25s
  - name: containerd_service
    connect_timeout: 0.25s
    type: static
    http2_protocol_options: {}
    lb_policy: round_robin
    hosts: [{"pipe": {"path": "/run/containerd/containerd.sock"}}]
  - name: default_service
    connect_timeout: 0.25s
    type: static
    lb_policy: round_robin
    hosts: [{ socket_address: { address: 127.0.0.1, port_value: 8081 }}]
